2002-12-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSIndex.m: Fix error indexing vararg methods.

2002-12-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSDistributedNotificationCenter.h: add type
	for LAN-wide notifications.  Add ivar to support this.
	* Source/NSDistributedNotificationCenter.m: Implement support for
	a LAN-wide notification center.  Fully document class.
	* Tools/gdnc.m: Add new GSNetwork flag to operate as LAN-wide
	notification center.
	* Tools/AGSHtml.m: Don't output contents section if there is
	nothing to show (ie must have at least two sections to index).
	* Source/NSConnection.m: Add locks to protect proxy cache in timeout.

2002-12-10  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Enable libffi on darwin by default.

2002-12-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: ([removeObjectsFromIndices:numIndices:])
	bugfix for sorting by Kelvin Sherlock.
	* Source/NSConnection.m: Experimental code to keep local objects
	retained long enough to deal with most cases where the remote
	process may want them again.
	* Source/NSHost.m: Don't cache local host name ... it may change
	due to use of DHCP etc.

2002-12-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Fix race condition firing perform holder.
	Fix supplied by Philip Derrin.

2002-12-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fix uninitialised local variable 'locale'
	which was causing a crash ... not 100% sure my fix is making the code
	work as intended.  Could Adam please check it?

2002-12-04  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/GSLocale.h: Add category arg to
	SetLocale functions.
	* Source/GSLocale.m (GSSetLocaleC, GSSetLocale): Update for change.
	* Source/NSObject.m (+initialize): Idem.
	* Source/NSUserDefaults.m ([NSUserDefaults +standardUserDefaults]):
	Idem.

2002-12-04  Richard Frith-Macdonald <rfm@gnu.org>
